# ibc-starknet

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  justfile  relayer.toml.example  result  rust-toolchain-wasm.toml  taplo.toml
attestator/: Cargo.toml  README.md
attestator/attestator/: Cargo.toml
attestator/attestator-cli/: Cargo.toml
attestator/attestator-cli/src/: node.rs  random.rs
attestator/attestator/src/: challenge.rs  client.rs  lib.rs
attestator/src/: attestator.rs  client.rs  lib.rs  main.rs  utils.rs
crates/: Cargo.toml  README.md  rustfmt.toml
crates/client/cw-contract/: Cargo.toml
crates/client/impls/: Cargo.toml
crates/client/impls/src/: consensus_state.rs
crates/client/types/: Cargo.toml
dummy-light-client/cw-contract/: Cargo.toml
dummy-light-client/cw-contract/src/: client_type.rs  entrypoint.rs
dummy-light-client/impls/: Cargo.toml
dummy-light-client/impls/src/: consensus_state.rs
dummy-light-client/impls/src/client_state/: common.rs  execution.rs  mod.rs  validation.rs
light-client/: Cargo.toml
light-client/cw-contract/: Cargo.toml
light-client/ibc-client-starknet/: Cargo.toml
light-client/ibc-client-starknet-cw/: Cargo.toml
light-client/ibc-client-starknet-cw/src/: client_type.rs  entrypoint.rs  lib.rs
light-client/ibc-client-starknet-types/: Cargo.toml
light-client/ibc-client-starknet-types/src/: client_state.rs  consensus_state.rs  header.rs  lib.rs  misbehaviour.rs
light-client/ibc-client-starknet-types/src/encoding/: components.rs  context.rs  mod.rs
light-client/ibc-client-starknet-types/src/encoding/impls/: chain_id.rs  client_state.rs  commitment_root.rs  consensus_state.rs  felt.rs  header.rs  misbehaviour.rs  mod.rs  timestamp.rs
light-client/ibc-client-starknet/src/: consensus_state.rs  lib.rs
light-client/ibc-client-starknet/src/client_state/: common.rs  cw.rs  execution.rs  mod.rs  validation.rs
light-client/ibc-client-starknet/src/encoding/: channel.rs  connection.rs  context.rs  mod.rs  utils.rs
light-client/impls/: Cargo.toml
light-client/impls/src/: consensus_state.rs
light-client/impls/src/client_state/: common.rs  execution.rs  mod.rs  validation.rs
light-client/poseidon/: Cargo.toml
light-client/poseidon/src/: hades.rs  lib.rs
light-client/starknet-block-verifier/: Cargo.toml
light-client/starknet-block-verifier/src/: consts.rs  feeder.rs  funcs.rs  lib.rs  types.rs
light-client/starknet-block-verifier/tests/: block.rs
light-client/starknet-crypto-lib/: Cargo.toml
light-client/starknet-crypto-lib/src/: contract.rs  cw.rs  funcs.rs  lib.rs
light-client/starknet-light-client-cw/: Cargo.toml
light-client/starknet-light-client-cw/src/: contract.rs  lib.rs  types.rs
light-client/starknet-storage-verifier/: Cargo.toml
light-client/starknet-storage-verifier/src/: error.rs  lib.rs
light-client/starknet-storage-verifier/src/converter/: value.rs
light-client/starknet-storage-verifier/src/endpoint/: mod.rs
light-client/starknet-storage-verifier/src/ibc/: keys.rs  mod.rs  paths.rs  utils.rs
light-client/starknet-storage-verifier/src/storage/: key.rs  mod.rs  validate.rs  verifier.rs
light-client/starknet-storage-verifier/tests/: convert.rs  converter_tests.rs  ibc_path.rs  keys.rs  map_key.rs  storage_proof.rs  storage_proof_tests.rs
light-client/starknet-storage-verifier/tests/fixtures/: merkle_proof.json  storage_proof_failure.json  storage_proof_non_membership.json  storage_proof_success.json
light-client/types/: Cargo.toml
light-client/types/src/: client_message.rs  client_state.rs  consensus_state.rs  lib.rs
relayer/: .gitignore  Cargo.toml
relayer/crates/cairo-encoding-components/: Cargo.toml
relayer/crates/cairo-encoding-components/src/: components.rs  lib.rs  macros.rs  strategy.rs
relayer/crates/cairo-encoding-components/src/components/: encode_mut.rs  encoding.rs  mod.rs
relayer/crates/cairo-encoding-components/src/impls/: mod.rs
relayer/crates/cairo-encoding-components/src/traits/: decode_mut.rs  encode_and_decode_mut.rs  encode_mut.rs  mod.rs  size.rs  transform.rs
relayer/crates/cairo-encoding-components/src/types/: as_felt.rs  as_starknet_event.rs  either.rs  mod.rs  nat.rs  tagged.rs
relayer/crates/poseidon/: Cargo.toml
relayer/crates/poseidon/src/: hades.rs  lib.rs  poseidon_3.rs
relayer/crates/starknet-chain-components/: Cargo.toml
relayer/crates/starknet-chain-components/src/: components.rs  lib.rs
relayer/crates/starknet-chain-components/src/components/: cairo_encoding.rs  chain.rs  cosmos_to_starknet.rs  madara_to_cosmos.rs  mod.rs  protobuf_encoding.rs  starknet_to_cosmos.rs  types.rs
relayer/crates/starknet-chain-components/src/impls/: account.rs  client_refresh_rate.rs  commitment_prefix.rs  commitment_proof.rs  counterparty_message_height.rs  ibc_amount.rs  json_rpc.rs  mod.rs  packet_fields.rs  packet_filter.rs  proof_signer.rs  provider.rs  send_message.rs  storage_proof.rs  submit_tx.rs  transfer.rs  (+2 more)
relayer/crates/starknet-chain-context/: Cargo.toml
relayer/crates/starknet-chain-context/src/: lib.rs
relayer/crates/starknet-cli/: Cargo.toml
relayer/crates/starknet-cli/examples/: bootstrap_ibc.rs
relayer/crates/starknet-cli/src/: lib.rs
relayer/crates/starknet-integration-tests/: Cargo.toml
relayer/crates/starknet-integration-tests/examples/: contract_size.rs
relayer/crates/starknet-integration-tests/src/: lib.rs
relayer/crates/starknet-integration-tests/tests/: chain.rs  erc20.rs  ibc.rs  ibc_client.rs  ics20.rs  light_client.rs  starknet_ibc.rs
relayer/crates/starknet-madara-tests/: Cargo.toml
relayer/crates/starknet-madara-tests/src/: lib.rs
relayer/crates/starknet-relayer/: Cargo.toml
relayer/crates/starknet-relayer/src/: lib.rs
relayer/crates/starknet-test-components/: Cargo.toml
relayer/crates/tools/: Cargo.toml
relayer/crates/tools/src/: lib.rs
relayer/scripts/: bootstrap-chain-a.sh  bootstrap-chain-b.sh  clear.sh  create-channel.sh  create-client-a.sh  create-client-b.sh  create-connection.sh  start.sh
tools/: Cargo.toml
tools/crates/cli/: Cargo.toml
(+750 files in other folders)
