[package]
name    = "attestator"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek   = { version = "2.2", features = [ "digest" ] }
serde           = { version = "1", features = [ "derive" ] }
starknet-crypto = { version = "0.7.4" }
starknet-core   = { version = "0.15.0" }
rocket          = { version = "0.5.1", features = ["json"]}
ureq            = { version = "3", features = ["json"]}
rand            = { version = "0.9.2" }

[dev-dependencies]
starknet-signers = { version = "0.13.0" }
