[workspace]
resolver = "2"

members = [
  "attestator",
  "attestator-cli",
]

[workspace.package]
version    = "0.1.0"
edition    = "2024"
license    = "Apache-2.0"
keywords   = [ "blockchain", "consensus", "cosmos", "ibc", "tendermint" ]
repository = "https://github.com/informalsystems/hermes-sdk"
authors    = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
ed25519-dalek    = { version = "2.2" }
serde            = { version = "1" }
starknet-crypto  = { version = "0.7.4" }
starknet-core    = { version = "0.15.0" }
rocket           = { version = "0.5.1" }
ureq             = { version = "3" }
rand             = { version = "0.9.2" }
thiserror        = { version = "2" }
starknet-signers = { version = "0.13.0" }
attestator       = { version = "0.1.0" }
serde_with       = { version = "3" }
serde_json       = { version = "1" }

[patch.crates-io]
attestator = { path = "./attestator" }
