[workspace]
resolver = "2"
members = [
  "./ibc-client-starknet",
  "./ibc-client-starknet-cw",
  "./ibc-client-starknet-types",
  "./starknet-storage-verifier",
]

[workspace.package]
version      = "0.1.0"
license      = "MIT OR Apache-2.0"
edition      = "2021"
rust-version = "1.72.1"
publish      = false
authors      = [ "Informal Systems <hello@informal.systems>" ]
repository   = "https://github.com/informalsystems/ibc-starknet"

[workspace.dependencies]
ibc-client-starknet       = { version = "0.1.0" }
ibc-client-starknet-cw    = { version = "0.1.0" }
ibc-client-starknet-types = { version = "0.1.0" }
starknet-storage-verifier = { version = "0.1.0" }

# external dependencies
derive_more = { version = "0.99.11", features = [ "from", "try_into" ] }
indexmap    = { version = "2.9.0" }
prost       = { version = "0.13.1" }
prost-types = { version = "0.13.1" }
serde       = { version = "1.0.210", features = [ "derive" ] }
starknet-core    = { version = "0.13.0" }
starknet-crypto    = { version = "0.7.4" }
starknet-macros  = { version = "0.2.2" }
thiserror   = { version = "2.0.12" }

# ibc depedenencies
ibc-core      = { version = "0.56.0", default-features = false, features = [ "borsh", "schema" ] }
ibc-client-cw = { version = "0.56.0", default-features = false }
ibc-proto     = { version = "0.51.1", default-features = false }
tendermint    = { version = "0.40.0", default-features = false }

cgp                                 = { version = "0.4.0" }
hermes-prelude                      = { version = "0.1.0" }
hermes-encoding-components          = { version = "0.1.0" }
hermes-protobuf-encoding-components = { version = "0.1.0" }
hermes-cosmos-encoding-components   = { version = "0.1.0" }
hermes-wasm-encoding-components     = { version = "0.1.0" }

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = { level = "deny", priority = -1 }
trivial_casts        = "deny"
unused_import_braces = "deny"
unused_variables     = "allow"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"
trait_duplication_in_bounds   = "deny"
use_self                      = "deny"
redundant_clone               = "deny"

[patch.crates-io]
ibc-client-starknet       = { path = "./ibc-client-starknet" }
ibc-client-starknet-cw    = { path = "./ibc-client-starknet-cw" }
ibc-client-starknet-types = { path = "./ibc-client-starknet-types" }

ibc-client-cw = { git = "https://github.com/informalsystems/cosmwasm-ibc.git", branch = "starknet/demo2" }

ibc                         = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-client-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-tendermint-types = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-channel-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-handler-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }

cgp             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-core        = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async-macro = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-macro       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-macro-lib   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-type        = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-extra = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-run         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-runtime     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-sync        = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-inner       = { git = "https://github.com/contextgeneric/cgp.git" }

hermes-prelude                      = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-encoding-components          = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-protobuf-encoding-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-encoding-components   = { git = "https://github.com/informalsystems/hermes-sdk.git" }
