[workspace]
resolver = "2"
members = [
  "./ibc-client-starknet",
  "./ibc-client-starknet-cw",
  "./ibc-client-starknet-types",
  "./starknet-block-verifier",
  "./starknet-storage-verifier",
  "./starknet-light-client-cw",
]

[workspace.package]
version      = "0.1.0"
license      = "MIT OR Apache-2.0"
edition      = "2021"
rust-version = "1.80.0"
publish      = false
authors      = [ "Informal Systems <hello@informal.systems>" ]
repository   = "https://github.com/informalsystems/ibc-starknet"

[workspace.dependencies]
ibc-client-starknet       = { version = "0.1.0" }
ibc-client-starknet-cw    = { version = "0.1.0" }
ibc-client-starknet-types = { version = "0.1.0" }
starknet-block-verifier   = { version = "0.1.0" }
starknet-storage-verifier = { version = "0.1.0" }

# external dependencies
derive_more = { version = "2", features = [ "from", "try_into" ] }
indexmap    = { version = "2.10" }
prost       = { version = "0.13.5" }
prost-types = { version = "0.13.5" }
rstest      = { version = "0.25" }
serde       = { version = "1.0", features = [ "derive" ] }
serde_json  = { version = "1.0" }
sha2        = { version = "0.10.9" }
ureq        = { version = "3.0", default-features = false }

starknet            = { version = "0.14.0" }
starknet-core       = { version = "0.13.0" }
starknet-crypto     = { version = "0.7.4" }
starknet-macros     = { version = "0.2.3" }
starknet-types-core = { version = "0.1.8" }

# ibc depedenencies
ibc-core      = { version = "0.56.0", default-features = false, features = [ "borsh", "schema" ] }
ibc-client-cw = { version = "0.56.0", default-features = false }
ibc-proto     = { version = "0.51.1", default-features = false }

cgp                                 = { version = "0.4.0" }
hermes-prelude                      = { version = "0.1.0" }
hermes-encoding-components          = { version = "0.1.0" }
hermes-protobuf-encoding-components = { version = "0.1.0" }
hermes-cosmos-encoding-components   = { version = "0.1.0" }
hermes-wasm-encoding-components     = { version = "0.1.0" }

[profile.release]
# Optimize for size.
opt-level = 'z'
# Link-Time Optimization.
lto = true
# Reduce code generation units.
codegen-units = 1
# Abort on panic.
panic = 'abort'
# Strip symbols from the binary.
strip = true

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = { level = "deny", priority = -1 }
trivial_casts        = "deny"
unused_import_braces = "deny"
unused_variables     = "allow"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"
trait_duplication_in_bounds   = "deny"
use_self                      = "deny"
redundant_clone               = "deny"

[patch.crates-io]
ibc-client-starknet       = { path = "./ibc-client-starknet" }
ibc-client-starknet-cw    = { path = "./ibc-client-starknet-cw" }
ibc-client-starknet-types = { path = "./ibc-client-starknet-types" }
starknet-block-verifier   = { path = "./starknet-block-verifier" }
starknet-storage-verifier = { path = "./starknet-storage-verifier" }

ibc                         = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-client-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-tendermint-types = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-channel-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-handler-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }

cgp             = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-core        = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-extra       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-async       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-async-macro = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-component   = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-macro       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-macro-lib   = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-type        = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-field       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-error       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-error-extra = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-run         = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-runtime     = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-sync        = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-inner       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }

hermes-prelude                      = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-encoding-components          = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-protobuf-encoding-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-encoding-components   = { git = "https://github.com/informalsystems/hermes-sdk.git" }
