[workspace]

resolver = "2"

members = [
  "crates/cairo-encoding-components",
  "crates/starknet-chain-components",
  "crates/starknet-chain-context",
  "crates/starknet-relayer",
  "crates/starknet-test-components",
  "crates/starknet-integration-tests",
  "crates/starknet-cli",
  "crates/poseidon",
  "crates/tools",
]

[workspace.package]

version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
keywords     = [ "blockchain", "consensus", "cosmos", "ibc", "tendermint" ]
repository   = "https://github.com/informalsystems/hermes-sdk"
authors      = [ "Informal Systems <hello@informal.systems>" ]
rust-version = "1.81"

[profile.release]
overflow-checks = true

[workspace.dependencies]
cgp            = { version = "0.3.1" }
cgp-error-eyre = { version = "0.3.0" }

starknet                    = { version = "0.11.0" }
starknet-types-core         = { version = "0.1.7" }
url                         = { version = "2.4.0" }
eyre                        = { version = "0.6.12" }
tokio                       = { version = "1.38" }
secp256k1                   = { version = "0.28.2" }
serde                       = { version = "1.0" }
serde_json                  = { version = "1.0" }
rand                        = { version = "0.8.5" }
sha2                        = { version = "0.10.8" }
tonic                       = { version = "0.12" }
prost                       = { version = "0.13.1" }
prost-types                 = { version = "0.13.1" }
cairo-lang-starknet-classes = { version = "2.9.2" }
clap                        = { version = "4.5.20" }
toml                        = { version = "0.8.15" }
oneline-eyre                = { version = "0.1.0" }
stable-eyre                 = { version = "0.2.2" }
tracing                     = { version = "0.1.40" }
tracing-subscriber          = { version = "0.3.18" }
flate2                      = { version = "1.0" }
http                        = { version = "1.0.0" }
futures                     = { version = "0.3.30", default-features = false }
tiny-bip39                  = { version = "1.0.0" }

ibc                       = { version = "0.56.0" }
ibc-proto                 = { version = "0.51.1" }
ibc-client-starknet-types = { version = "0.1.0" }
tendermint-rpc            = { version = "0.40" }

hermes-runtime-components           = { version = "0.1.0" }
hermes-async-runtime-components     = { version = "0.1.0" }
hermes-tokio-runtime-components     = { version = "0.1.0" }
hermes-chain-components             = { version = "0.1.0" }
hermes-chain-type-components        = { version = "0.1.0" }
hermes-runtime                      = { version = "0.1.0" }
hermes-error                        = { version = "0.1.0" }
hermes-encoding-components          = { version = "0.1.0" }
hermes-logging-components           = { version = "0.1.0" }
hermes-tracing-logging-components   = { version = "0.1.0" }
hermes-logger                       = { version = "0.1.0" }
hermes-relayer-components           = { version = "0.1.0" }
hermes-cosmos-chain-components      = { version = "0.1.0" }
hermes-cosmos-encoding-components   = { version = "0.1.0" }
hermes-cosmos-relayer               = { version = "0.1.0" }
hermes-cosmos-wasm-relayer          = { version = "0.1.0" }
hermes-cosmos-test-components       = { version = "0.1.0" }
hermes-cosmos-integration-tests     = { version = "0.1.0" }
hermes-any-counterparty             = { version = "0.1.0" }
hermes-wasm-client-components       = { version = "0.1.0" }
hermes-wasm-test-components         = { version = "0.1.0" }
hermes-wasm-encoding-components     = { version = "0.1.0" }
hermes-cli-components               = { version = "0.1.0" }
hermes-cli                          = { version = "0.1.0" }
hermes-starknet-cli                 = { version = "0.1.0" }
hermes-test-components              = { version = "0.1.0" }
hermes-cairo-encoding-components    = { version = "0.1.0" }
hermes-protobuf-encoding-components = { version = "0.1.0" }
hermes-starknet-chain-components    = { version = "0.1.0" }
hermes-starknet-test-components     = { version = "0.1.0" }
hermes-starknet-chain-context       = { version = "0.1.0" }
hermes-starknet-relayer             = { version = "0.1.0" }
hermes-starknet-integration-tests   = { version = "0.1.0" }
poseidon                            = { version = "0.1.0" }

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = { level = "deny", priority = -1 }
trivial_casts        = "deny"
unused_import_braces = "deny"
unused_variables     = "allow"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"
trait_duplication_in_bounds   = "deny"
use_self                      = "deny"
redundant_clone               = "deny"
type_repetition_in_bounds     = "deny"

[patch.crates-io]
hermes-cairo-encoding-components  = { path = "./crates/cairo-encoding-components" }
hermes-starknet-chain-components  = { path = "./crates/starknet-chain-components" }
hermes-starknet-test-components   = { path = "./crates/starknet-test-components" }
hermes-starknet-chain-context     = { path = "./crates/starknet-chain-context" }
hermes-starknet-relayer           = { path = "./crates/starknet-relayer" }
hermes-starknet-cli               = { path = "./crates/starknet-cli" }
hermes-starknet-integration-tests = { path = "./crates/starknet-integration-tests" }

ibc                         = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-core-client-types       = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-client-tendermint-types = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-core-channel-types      = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }
ibc-core-handler-types      = { git = "https://github.com/cosmos/ibc-rs", branch = "main" }

ibc-client-starknet-types = { path = "../light-client/ibc-client-starknet-types" }

poseidon = { path = "./crates/poseidon" }

cgp                     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-core                = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra               = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async               = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async-macro         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component           = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component-macro     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component-macro-lib = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-type                = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field               = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field-macro         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field-macro-lib     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error               = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-extra         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-run                 = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-runtime             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-sync                = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-inner               = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-eyre          = { git = "https://github.com/contextgeneric/cgp.git" }

hermes-chain-components              = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-chain-type-components         = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-relayer-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-relayer-components-extra      = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-runtime-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-async-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-tokio-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-runtime                       = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-error                         = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-encoding-components           = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-protobuf-encoding-components  = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-logging-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-tracing-logging-components    = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-logger                        = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-test-components               = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-ibc-test-suite                = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-any-counterparty              = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cosmos-chain-components       = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cosmos-relayer                = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cosmos-wasm-relayer           = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cosmos-test-components        = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cosmos-encoding-components    = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cosmos-integration-tests      = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-comet-light-client-components = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-comet-light-client-context    = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-wasm-test-components          = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-wasm-client-components        = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-wasm-encoding-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cli-components                = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cli                           = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
hermes-cli-framework                 = { git = "https://github.com/informalsystems/hermes-sdk.git", rev="b5be905715ecb149c4b6d508f33dbc7f5eafb5c7" }
